// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ListsContainer does not render pending lists when they do not exist 1`] = `
<div>
  <h1>
    Lists
  </h1>
  <button
    aria-controls="form-collapse"
    aria-expanded="false"
    class="btn btn-link"
    type="button"
  >
    Add List
  </button>
  <form
    autocomplete="off"
    class="collapse"
    id="form-collapse"
  >
    <div
      class="mb-3"
    >
      <label
        class="form-label"
        for="name"
      >
        Name
      </label>
      <input
        class="form-control"
        id="name"
        name="name"
        placeholder="My super cool list"
        type="text"
        value=""
      />
      
    </div>
    <div
      class="mb-3"
    >
      <label
        class="form-label"
        for="type"
      >
        Type
      </label>
      <select
        class="form-control"
        id="type"
        name="type"
      >
        <option
          value="BookList"
        >
          books
        </option>
        <option
          value="GroceryList"
        >
          groceries
        </option>
        <option
          value="MusicList"
        >
          music
        </option>
        <option
          value="SimpleList"
        >
          simple
        </option>
        <option
          value="ToDoList"
        >
          to-do
        </option>
      </select>
      
    </div>
    <div
      class="d-grid gap-2 mt-3"
    >
      <button
        class="btn btn-success"
        type="submit"
      >
        Create List
      </button>
      <button
        class="btn btn-link"
        type="button"
      >
        Collapse Form
      </button>
    </div>
  </form>
  <hr
    class="mb-4"
  />
  <div
    class="mb-4"
  >
    <div
      class="clearfix"
    >
      <div
        class="mx-auto float-start"
      >
        <div
          class="m-0 row"
        >
          <h2
            class="text-capitalize pe-0 w-auto"
          >
            Incomplete
          </h2>
          <i
            class="far fa-question-circle float-end text-secondary ps-0 w-auto"
            data-test-id="Incomplete-popover"
          />
        </div>
      </div>
      <button
        class="mx-auto float-end btn btn-link"
        type="button"
      >
        
         Select
      </button>
    </div>
    <div
      class="list-group"
    >
      <div
        class="accepted-list list-list-group-item list-group-item"
        data-test-class="incomplete-list"
        data-test-id="list-id3"
      >
        <div
          class="row"
        >
          <div
            class="col-sm-12 col-12"
          >
            <div
              class=" pt-1 row"
            >
              <div
                class="col-lg-6"
              >
                <a
                  class="router-link"
                  href="/lists/id3"
                >
                  <h5
                    class="mb-1"
                  >
                    <i
                      class="fa fa-music text-secondary me-3"
                    />
                    baz
                  </h5>
                </a>
              </div>
              <div
                class="col-lg-4"
              >
                <small
                  class="text-muted"
                >
                  May 31 2020, 12:00:00 am
                </small>
              </div>
              <div
                class=" pe-lg-3 col-lg-2"
              >
                <div
                  class="float-end btn-group"
                  role="group"
                >
                  <button
                    class="p-0 me-3 btn btn-link"
                    data-test-id="incomplete-list-complete"
                    type="button"
                  >
                    <i
                      class="fa fa-check fa-2x text-success"
                    />
                  </button>
                  <a
                    class="p-0 me-3 list-button-enabled"
                    data-test-id="incomplete-list-share"
                    href="/lists/id3/users_lists"
                  >
                    <i
                      class="fa fa-users fa-2x text-primary"
                    />
                  </a>
                  <a
                    class="p-0 mr-3 list-button-enabled"
                    data-test-id="incomplete-list-edit"
                    href="/lists/id3/edit"
                  >
                    <i
                      class="fa fa-edit fa-2x text-warning"
                    />
                  </a>
                  <button
                    class="p-0 btn btn-link"
                    data-test-id="incomplete-list-trash"
                    type="button"
                  >
                    <i
                      class="fa fa-trash fa-2x text-danger"
                    />
                  </button>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="accepted-list list-list-group-item list-group-item"
        data-test-class="incomplete-list"
        data-test-id="list-id5"
      >
        <div
          class="row"
        >
          <div
            class="col-sm-12 col-12"
          >
            <div
              class=" pt-1 row"
            >
              <div
                class="col-lg-6"
              >
                <a
                  class="router-link"
                  href="/lists/id5"
                >
                  <h5
                    class="mb-1"
                  >
                    <i
                      class="fa fa-list text-secondary me-3"
                    />
                    foobar
                  </h5>
                </a>
              </div>
              <div
                class="col-lg-4"
              >
                <small
                  class="text-muted"
                >
                  May 31 2020, 12:00:00 am
                </small>
              </div>
              <div
                class=" pe-lg-3 col-lg-2"
              >
                <div
                  class="float-end btn-group"
                  role="group"
                >
                  <button
                    class="p-0 me-3 btn btn-link"
                    data-test-id="incomplete-list-complete"
                    type="button"
                  >
                    <i
                      class="fa fa-check fa-2x text-success"
                    />
                  </button>
                  <a
                    class="p-0 me-3 list-button-disabled"
                    data-test-id="incomplete-list-share"
                    disabled=""
                    href="/lists/id5/users_lists"
                  >
                    <i
                      class="fa fa-users fa-2x text-primary"
                    />
                  </a>
                  <a
                    class="p-0 mr-3 list-button-enabled"
                    data-test-id="incomplete-list-edit"
                    href="/lists/id5/edit"
                  >
                    <i
                      class="fa fa-edit fa-2x text-warning"
                    />
                  </a>
                  <button
                    class="p-0 btn btn-link"
                    data-test-id="incomplete-list-trash"
                    type="button"
                  >
                    <i
                      class="fa fa-trash fa-2x text-danger"
                    />
                  </button>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="mb-4"
  >
    <div
      class="clearfix"
    >
      <div
        class="mx-auto float-start"
      >
        <div
          class="m-0 row"
        >
          <h2
            class="text-capitalize pe-0 w-auto"
          >
            Completed
          </h2>
          <i
            class="far fa-question-circle float-end text-secondary ps-0 w-auto"
            data-test-id="Completed-popover"
          />
        </div>
      </div>
      <button
        class="mx-auto float-end btn btn-link"
        type="button"
      >
        
         Select
      </button>
    </div>
    <div
      class="list-group"
    >
      <div
        class="accepted-list list-list-group-item list-group-item"
        data-test-class="completed-list"
        data-test-id="list-id2"
      >
        <div
          class="row"
        >
          <div
            class="col-sm-12 col-12"
          >
            <div
              class=" pt-1 row"
            >
              <div
                class="col-lg-6"
              >
                <a
                  class="router-link"
                  href="/lists/id2"
                >
                  <h5
                    class="mb-1"
                  >
                    <i
                      class="fa fa-book text-secondary me-3"
                    />
                    bar
                  </h5>
                </a>
              </div>
              <div
                class="col-lg-4"
              >
                <small
                  class="text-muted"
                >
                  May 31 2020, 12:00:00 am
                </small>
              </div>
              <div
                class=" pe-lg-3 col-lg-2"
              >
                <div
                  class="float-end btn-group"
                  role="group"
                >
                  <button
                    class="p-0 me-3 list-button-enabled btn btn-link"
                    data-test-id="complete-list-refresh"
                    type="button"
                  >
                    <i
                      class="fa fa-redo fa-2x text-primary"
                    />
                  </button>
                  <button
                    class="p-0 btn btn-link"
                    data-test-id="complete-list-trash"
                    type="button"
                  >
                    <i
                      class="fa fa-trash fa-2x text-danger"
                    />
                  </button>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="accepted-list list-list-group-item list-group-item"
        data-test-class="completed-list"
        data-test-id="list-id4"
      >
        <div
          class="row"
        >
          <div
            class="col-sm-12 col-12"
          >
            <div
              class=" pt-1 row"
            >
              <div
                class="col-lg-6"
              >
                <a
                  class="router-link"
                  href="/lists/id4"
                >
                  <h5
                    class="mb-1"
                  >
                    <i
                      class="fa fa-book text-secondary me-3"
                    />
                    bar
                  </h5>
                </a>
              </div>
              <div
                class="col-lg-4"
              >
                <small
                  class="text-muted"
                >
                  May 31 2020, 12:00:00 am
                </small>
              </div>
              <div
                class=" pe-lg-3 col-lg-2"
              >
                <div
                  class="float-end btn-group"
                  role="group"
                >
                  <button
                    class="p-0 me-3 list-button-disabled btn btn-link"
                    data-test-id="complete-list-refresh"
                    disabled=""
                    type="button"
                  >
                    <i
                      class="fa fa-redo fa-2x text-primary"
                    />
                  </button>
                  <button
                    class="p-0 btn btn-link"
                    data-test-id="complete-list-trash"
                    type="button"
                  >
                    <i
                      class="fa fa-trash fa-2x text-danger"
                    />
                  </button>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`ListsContainer renders 1`] = `
<div>
  <h1>
    Lists
  </h1>
  <button
    aria-controls="form-collapse"
    aria-expanded="false"
    class="btn btn-link"
    type="button"
  >
    Add List
  </button>
  <form
    autocomplete="off"
    class="collapse"
    id="form-collapse"
  >
    <div
      class="mb-3"
    >
      <label
        class="form-label"
        for="name"
      >
        Name
      </label>
      <input
        class="form-control"
        id="name"
        name="name"
        placeholder="My super cool list"
        type="text"
        value=""
      />
      
    </div>
    <div
      class="mb-3"
    >
      <label
        class="form-label"
        for="type"
      >
        Type
      </label>
      <select
        class="form-control"
        id="type"
        name="type"
      >
        <option
          value="BookList"
        >
          books
        </option>
        <option
          value="GroceryList"
        >
          groceries
        </option>
        <option
          value="MusicList"
        >
          music
        </option>
        <option
          value="SimpleList"
        >
          simple
        </option>
        <option
          value="ToDoList"
        >
          to-do
        </option>
      </select>
      
    </div>
    <div
      class="d-grid gap-2 mt-3"
    >
      <button
        class="btn btn-success"
        type="submit"
      >
        Create List
      </button>
      <button
        class="btn btn-link"
        type="button"
      >
        Collapse Form
      </button>
    </div>
  </form>
  <hr
    class="mb-4"
  />
  <div
    class="mb-4"
  >
    <div
      class="clearfix"
    >
      <div
        class="mx-auto float-start"
      >
        <div
          class="m-0 row"
        >
          <h2
            class="text-capitalize pe-0 w-auto"
          >
            Pending
          </h2>
          <i
            class="far fa-question-circle float-end text-secondary ps-0 w-auto"
            data-test-id="Pending-popover"
          />
        </div>
      </div>
      <button
        class="mx-auto float-end btn btn-link"
        type="button"
      >
        
         Select
      </button>
    </div>
    <div
      class="list-group"
    >
      <div
        class="pending-list list-list-group-item list-group-item"
        data-test-class="pending-list"
        data-test-id="list-id1"
      >
        <div
          class="row"
        >
          <div
            class="col-sm-12 col-12"
          >
            <div
              class=" pt-1 row"
            >
              <div
                class="col-lg-6"
              >
                <h5
                  class="mb-1"
                >
                  <i
                    class="fa fa-shopping-bag text-secondary me-3"
                  />
                  foo
                </h5>
              </div>
              <div
                class="col-lg-4"
              >
                <small
                  class="text-muted"
                >
                  May 31 2020, 12:00:00 am
                </small>
              </div>
              <div
                class=" pe-lg-3 col-lg-2"
              >
                <div
                  class="float-end btn-group"
                  role="group"
                >
                  <button
                    class="p-0 me-3 btn btn-link"
                    data-test-id="pending-list-accept"
                    type="button"
                  >
                    <i
                      class="fa fa-check fa-2x text-success"
                    />
                  </button>
                  <button
                    class="p-0 btn btn-link"
                    data-test-id="pending-list-trash"
                    type="button"
                  >
                    <i
                      class="fa fa-trash fa-2x text-danger"
                    />
                  </button>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="mb-4"
  >
    <div
      class="clearfix"
    >
      <div
        class="mx-auto float-start"
      >
        <div
          class="m-0 row"
        >
          <h2
            class="text-capitalize pe-0 w-auto"
          >
            Incomplete
          </h2>
          <i
            class="far fa-question-circle float-end text-secondary ps-0 w-auto"
            data-test-id="Incomplete-popover"
          />
        </div>
      </div>
      <button
        class="mx-auto float-end btn btn-link"
        type="button"
      >
        
         Select
      </button>
    </div>
    <div
      class="list-group"
    >
      <div
        class="accepted-list list-list-group-item list-group-item"
        data-test-class="incomplete-list"
        data-test-id="list-id3"
      >
        <div
          class="row"
        >
          <div
            class="col-sm-12 col-12"
          >
            <div
              class=" pt-1 row"
            >
              <div
                class="col-lg-6"
              >
                <a
                  class="router-link"
                  href="/lists/id3"
                >
                  <h5
                    class="mb-1"
                  >
                    <i
                      class="fa fa-music text-secondary me-3"
                    />
                    baz
                  </h5>
                </a>
              </div>
              <div
                class="col-lg-4"
              >
                <small
                  class="text-muted"
                >
                  May 31 2020, 12:00:00 am
                </small>
              </div>
              <div
                class=" pe-lg-3 col-lg-2"
              >
                <div
                  class="float-end btn-group"
                  role="group"
                >
                  <button
                    class="p-0 me-3 btn btn-link"
                    data-test-id="incomplete-list-complete"
                    type="button"
                  >
                    <i
                      class="fa fa-check fa-2x text-success"
                    />
                  </button>
                  <a
                    class="p-0 me-3 list-button-enabled"
                    data-test-id="incomplete-list-share"
                    href="/lists/id3/users_lists"
                  >
                    <i
                      class="fa fa-users fa-2x text-primary"
                    />
                  </a>
                  <a
                    class="p-0 mr-3 list-button-enabled"
                    data-test-id="incomplete-list-edit"
                    href="/lists/id3/edit"
                  >
                    <i
                      class="fa fa-edit fa-2x text-warning"
                    />
                  </a>
                  <button
                    class="p-0 btn btn-link"
                    data-test-id="incomplete-list-trash"
                    type="button"
                  >
                    <i
                      class="fa fa-trash fa-2x text-danger"
                    />
                  </button>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="accepted-list list-list-group-item list-group-item"
        data-test-class="incomplete-list"
        data-test-id="list-id5"
      >
        <div
          class="row"
        >
          <div
            class="col-sm-12 col-12"
          >
            <div
              class=" pt-1 row"
            >
              <div
                class="col-lg-6"
              >
                <a
                  class="router-link"
                  href="/lists/id5"
                >
                  <h5
                    class="mb-1"
                  >
                    <i
                      class="fa fa-list text-secondary me-3"
                    />
                    foobar
                  </h5>
                </a>
              </div>
              <div
                class="col-lg-4"
              >
                <small
                  class="text-muted"
                >
                  May 31 2020, 12:00:00 am
                </small>
              </div>
              <div
                class=" pe-lg-3 col-lg-2"
              >
                <div
                  class="float-end btn-group"
                  role="group"
                >
                  <button
                    class="p-0 me-3 btn btn-link"
                    data-test-id="incomplete-list-complete"
                    type="button"
                  >
                    <i
                      class="fa fa-check fa-2x text-success"
                    />
                  </button>
                  <a
                    class="p-0 me-3 list-button-disabled"
                    data-test-id="incomplete-list-share"
                    disabled=""
                    href="/lists/id5/users_lists"
                  >
                    <i
                      class="fa fa-users fa-2x text-primary"
                    />
                  </a>
                  <a
                    class="p-0 mr-3 list-button-enabled"
                    data-test-id="incomplete-list-edit"
                    href="/lists/id5/edit"
                  >
                    <i
                      class="fa fa-edit fa-2x text-warning"
                    />
                  </a>
                  <button
                    class="p-0 btn btn-link"
                    data-test-id="incomplete-list-trash"
                    type="button"
                  >
                    <i
                      class="fa fa-trash fa-2x text-danger"
                    />
                  </button>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="mb-4"
  >
    <div
      class="clearfix"
    >
      <div
        class="mx-auto float-start"
      >
        <div
          class="m-0 row"
        >
          <h2
            class="text-capitalize pe-0 w-auto"
          >
            Completed
          </h2>
          <i
            class="far fa-question-circle float-end text-secondary ps-0 w-auto"
            data-test-id="Completed-popover"
          />
        </div>
      </div>
      <button
        class="mx-auto float-end btn btn-link"
        type="button"
      >
        
         Select
      </button>
    </div>
    <div
      class="list-group"
    >
      <div
        class="accepted-list list-list-group-item list-group-item"
        data-test-class="completed-list"
        data-test-id="list-id2"
      >
        <div
          class="row"
        >
          <div
            class="col-sm-12 col-12"
          >
            <div
              class=" pt-1 row"
            >
              <div
                class="col-lg-6"
              >
                <a
                  class="router-link"
                  href="/lists/id2"
                >
                  <h5
                    class="mb-1"
                  >
                    <i
                      class="fa fa-book text-secondary me-3"
                    />
                    bar
                  </h5>
                </a>
              </div>
              <div
                class="col-lg-4"
              >
                <small
                  class="text-muted"
                >
                  May 31 2020, 12:00:00 am
                </small>
              </div>
              <div
                class=" pe-lg-3 col-lg-2"
              >
                <div
                  class="float-end btn-group"
                  role="group"
                >
                  <button
                    class="p-0 me-3 list-button-enabled btn btn-link"
                    data-test-id="complete-list-refresh"
                    type="button"
                  >
                    <i
                      class="fa fa-redo fa-2x text-primary"
                    />
                  </button>
                  <button
                    class="p-0 btn btn-link"
                    data-test-id="complete-list-trash"
                    type="button"
                  >
                    <i
                      class="fa fa-trash fa-2x text-danger"
                    />
                  </button>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="accepted-list list-list-group-item list-group-item"
        data-test-class="completed-list"
        data-test-id="list-id4"
      >
        <div
          class="row"
        >
          <div
            class="col-sm-12 col-12"
          >
            <div
              class=" pt-1 row"
            >
              <div
                class="col-lg-6"
              >
                <a
                  class="router-link"
                  href="/lists/id4"
                >
                  <h5
                    class="mb-1"
                  >
                    <i
                      class="fa fa-book text-secondary me-3"
                    />
                    bar
                  </h5>
                </a>
              </div>
              <div
                class="col-lg-4"
              >
                <small
                  class="text-muted"
                >
                  May 31 2020, 12:00:00 am
                </small>
              </div>
              <div
                class=" pe-lg-3 col-lg-2"
              >
                <div
                  class="float-end btn-group"
                  role="group"
                >
                  <button
                    class="p-0 me-3 list-button-disabled btn btn-link"
                    data-test-id="complete-list-refresh"
                    disabled=""
                    type="button"
                  >
                    <i
                      class="fa fa-redo fa-2x text-primary"
                    />
                  </button>
                  <button
                    class="p-0 btn btn-link"
                    data-test-id="complete-list-trash"
                    type="button"
                  >
                    <i
                      class="fa fa-trash fa-2x text-danger"
                    />
                  </button>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
